@@ -221,21 +221,6 @@ ipmi_rmcpplus_init (void)
 }
 
 int
-ipmi_rmcpplus_get_random (void *buf, unsigned int buflen)
-{
-  if (!buf)
-    {
-      SET_ERRNO (EINVAL);
-      return (-1);
-    }
-  
-  if (!buflen)
-    return (0);
-  
-  return (crypt_get_random (buf, buflen));
-}
-
-int
 fill_rmcpplus_session_hdr (uint8_t payload_type,
                            uint8_t payload_authenticated,
                            uint8_t payload_encrypted,
@@ -799,7 +784,7 @@ _construct_payload_confidentiality_aes_cbc_128 (uint8_t payload_type,
 
   assert (cipher_blocklen == IPMI_CRYPT_AES_CBC_128_BLOCK_LENGTH);
 
-  if ((iv_len = crypt_get_random (iv, IPMI_CRYPT_AES_CBC_128_IV_LENGTH)) < 0)
+  if ((iv_len = ipmi_get_random (iv, IPMI_CRYPT_AES_CBC_128_IV_LENGTH)) < 0)
     {
       ERRNO_TRACE (errno);
       return (-1);
